Bug 284611 - Muon crashed [BreadcrumbItem::associatedView, AbstractViewContainer::activateBreadcrumbItem, AbstractViewContainer::qt_metacall]
Summary: Muon crashed [BreadcrumbItem::associatedView, AbstractViewContainer::activate...
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: installer (other bugs)
Version First Reported In: 1.2.1
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 285643 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-10-21 11:41 UTC by Alexander Zaitsev
Modified: 2012-11-02 00:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.3.0, 1.4.0
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (6.09 KB, text/plain)
2012-11-02 00:54 UTC, wintonian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Zaitsev 2011-10-21 11:41:14 UTC
Application: muon-installer (1.2.1 "Caustic Carrionite")
KDE Platform Version: 4.7.1 (4.7.1)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-12-generic x86_64
Distribution: Ubuntu 11.10

-- Information about the crash:
- What I was doing when the application crashed:
I was trying to search 'fglrx', it displayed results, but after several seconds all results disappeared. I pushed 'back' and muon crashed.

- Unusual behavior I noticed:
search result has disappeared.

The crash can be reproduced some of the time.

-- Backtrace:
Application: Центр программ Muon (muon-installer), signal: Segmentation fault
[KCrash Handler]
#6  BreadcrumbItem::associatedView (this=0x21) at /build/buildd/muon-1.2.1/installer/BreadcrumbWidget/BreadcrumbItem.cpp:50
#7  0x0000000000433c2c in AbstractViewContainer::activateBreadcrumbItem (this=0x1f4f3b0, item=<optimized out>) at /build/buildd/muon-1.2.1/installer/AbstractViewContainer.cpp:77
#8  0x0000000000433d74 in AbstractViewContainer::qt_metacall (this=0x1f4f3b0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7ffffd566050) at /build/buildd/muon-1.2.1/obj-x86_64-linux-gnu/installer/AbstractViewContainer.moc:80
#9  0x00000000004341f0 in AvailableView::qt_metacall (this=0x1f4f3b0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7ffffd566050) at /build/buildd/muon-1.2.1/obj-x86_64-linux-gnu/installer/AvailableView.moc:70
#10 0x00007fc8acab8eba in QMetaObject::activate (sender=0x1f82fb0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7ffffd566050) at kernel/qobject.cpp:3278
#11 0x000000000043509d in BreadcrumbWidget::itemActivated (this=<optimized out>, _t1=0x21) at /build/buildd/muon-1.2.1/obj-x86_64-linux-gnu/installer/BreadcrumbWidget.moc:106
#12 0x00000000004352e1 in BreadcrumbWidget::onItemActivated (this=0x1f82fb0, item=0x21) at /build/buildd/muon-1.2.1/installer/BreadcrumbWidget/BreadcrumbWidget.cpp:167
#13 0x000000000043580c in BreadcrumbWidget::qt_metacall (this=0x1f82fb0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7ffffd566190) at /build/buildd/muon-1.2.1/obj-x86_64-linux-gnu/installer/BreadcrumbWidget.moc:92
#14 0x00007fc8acab8eba in QMetaObject::activate (sender=0x1d6d0a0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7ffffd566190) at kernel/qobject.cpp:3278
#15 0x00007fc8ab751582 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#16 0x00007fc8ab49713e in QAbstractButtonPrivate::emitClicked (this=<optimized out>) at widgets/qabstractbutton.cpp:546
#17 0x00007fc8ab49847b in QAbstractButtonPrivate::click (this=0x1e690f0) at widgets/qabstractbutton.cpp:539
#18 0x00007fc8ab4986ec in QAbstractButton::mouseReleaseEvent (this=0x1d6d0a0, e=0x7ffffd5668b0) at widgets/qabstractbutton.cpp:1121
#19 0x00007fc8ab5552da in QToolButton::mouseReleaseEvent (this=<optimized out>, e=<optimized out>) at widgets/qtoolbutton.cpp:721
#20 0x00007fc8ab130c9a in QWidget::event (this=0x1d6d0a0, event=0x7ffffd5668b0) at kernel/qwidget.cpp:8295
#21 0x00007fc8ab0e0424 in notify_helper (e=0x7ffffd5668b0, receiver=0x1d6d0a0, this=0x1110dc0) at kernel/qapplication.cpp:4486
#22 QApplicationPrivate::notify_helper (this=0x1110dc0, receiver=0x1d6d0a0, e=0x7ffffd5668b0) at kernel/qapplication.cpp:4458
#23 0x00007fc8ab0e5c6b in QApplication::notify (this=<optimized out>, receiver=0x1d6d0a0, e=0x7ffffd5668b0) at kernel/qapplication.cpp:4047
#24 0x00007fc8ac2c41e6 in KApplication::notify (this=0x7ffffd567510, receiver=0x1d6d0a0, event=0x7ffffd5668b0) at ../../kdeui/kernel/kapplication.cpp:311
#25 0x00007fc8acaa5afc in QCoreApplication::notifyInternal (this=0x7ffffd567510, receiver=0x1d6d0a0, event=0x7ffffd5668b0) at kernel/qcoreapplication.cpp:787
#26 0x00007fc8ab0e13f2 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#27 QApplicationPrivate::sendMouseEvent (receiver=0x1d6d0a0, event=0x7ffffd5668b0, alienWidget=0x1d6d0a0, nativeWidget=0x1111550, buttonDown=0x1d6d0a0, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3146
#28 0x00007fc8ab160945 in QETWidget::translateMouseEvent (this=0x1111550, event=<optimized out>) at kernel/qapplication_x11.cpp:4568
#29 0x00007fc8ab15f8be in QApplication::x11ProcessEvent (this=0x7ffffd567510, event=0x7ffffd5670d0) at kernel/qapplication_x11.cpp:3690
#30 0x00007fc8ab188412 in x11EventSourceDispatch (s=0x110f660, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#31 0x00007fc8a7188a5d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#32 0x00007fc8a7189258 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#33 0x00007fc8a7189429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#34 0x00007fc8acad0ed6 in QEventDispatcherGlib::processEvents (this=0x10e86f0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#35 0x00007fc8ab18807e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#36 0x00007fc8acaa4cf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#37 0x00007fc8acaa4ef7 in QEventLoop::exec (this=0x7ffffd5674a0, flags=...) at kernel/qeventloop.cpp:201
#38 0x00007fc8acaa9789 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#39 0x000000000041bd67 in main (argc=5, argv=0x7ffffd567788) at /build/buildd/muon-1.2.1/installer/main.cpp:61

Reported using DrKonqi
Comment 1 Jonathan Thomas 2011-10-22 23:10:37 UTC
Were you also installing something else at the time?
Comment 2 Alexander Zaitsev 2011-10-23 14:11:20 UTC
Nothing.
Comment 3 Christoph Feck 2011-11-03 17:15:08 UTC
*** Bug 285643 has been marked as a duplicate of this bug. ***
Comment 4 mossad 2011-11-03 17:19:49 UTC
(In reply to comment #1)
> Were you also installing something else at the time?

I've installed ISO Master and then I tried return to results.
Comment 5 Jonathan Thomas 2012-02-25 04:04:57 UTC
Git commit 6934739911449f1def49bd32b6d8cc7c08377117 by Jonathan Thomas.
Committed on 25/02/2012 at 05:03.
Pushed by jmthomas into branch '1.3'.

Always initialize the associatedView pointer with null, and don't try to switch to a null associated view.
Fixes a crash in certain rare situations.
FIXED-IN:1.3.0, 1.4.0

M  +3    -0    installer/AbstractViewContainer.cpp
M  +1    -0    installer/BreadcrumbWidget/BreadcrumbItem.cpp

http://commits.kde.org/muon/6934739911449f1def49bd32b6d8cc7c08377117
Comment 6 Jonathan Thomas 2012-02-25 04:04:59 UTC
Git commit a232344e0643cc2b96cfe51622b7450ab6d0c23c by Jonathan Thomas.
Committed on 25/02/2012 at 05:03.
Pushed by jmthomas into branch 'master'.

Always initialize the associatedView pointer with null, and don't try to switch to a null associated view.
Fixes a crash in certain rare situations.
FIXED-IN:1.3.0, 1.4.0

M  +3    -0    installer/AbstractViewContainer.cpp
M  +1    -0    installer/BreadcrumbWidget/BreadcrumbItem.cpp

http://commits.kde.org/muon/a232344e0643cc2b96cfe51622b7450ab6d0c23c
Comment 7 wintonian 2012-11-02 00:54:48 UTC
Created attachment 74928 [details]
New crash information added by DrKonqi

muon-installer (1.4.1) on KDE Platform 4.9.2 using Qt 4.8.3

- What I was doing when the application crashe

Immediately prior searching for konversation which appeared not to yield any results. After pressing back and trying again a few times I proceeded to close muon before restarting and trying again, however the crash occurred on close.

-- Backtrace (Reduced):
#6  BreadcrumbItem::associatedView (this=0x21) at /build/buildd/muon-1.4.1/installer/BreadcrumbWidget/BreadcrumbItem.cpp:51
#7  0x000000000042ad94 in AbstractViewContainer::activateBreadcrumbItem (this=0x312ff20, item=0x21) at /build/buildd/muon-1.4.1/installer/AbstractViewContainer.cpp:77
[...]
#9  0x000000000042ba8d in BreadcrumbWidget::itemActivated (this=this@entry=0x3095260, _t1=_t1@entry=0x21) at /build/buildd/muon-1.4.1/obj-x86_64-linux-gnu/installer/BreadcrumbWidget.moc:122
#10 0x000000000042bcc1 in BreadcrumbWidget::onItemActivated (this=0x3095260, item=0x21) at /build/buildd/muon-1.4.1/installer/BreadcrumbWidget/BreadcrumbWidget.cpp:169
[...]
#12 0x00007fabf08a9422 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:220