Always initialize the associatedView pointer with null, and don't try to switch to a null associated view. Fixes a crash in certain rare situations.

BUG:284611
FIXED-IN:1.3.0, 1.4.0